Add verification link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						</nav>
 						<card>
 							<p id="networkIdentifier">Your Metamask hasn't reported the current network yet.</p>
+							<p>If you haven't had your ethereum address verified yet, <a href="https://csguy.site/verify">please fill out the form here!</a></p>
 							<p id="prizeAmount">The prize pot is currently worth €</p>
 							<table id="optionContainer"></table>
 							<button id=submitButton onclick="submitAnswer()" disabled>Submit!</button>
